# ThicknessDiag

./: .gitignore  BO_algorithm_for_spheres.h  BO_algorithm_for_spheres.ih  CMakeLists.txt  Event_queue.h  Event_queue.ih  Event_queue_builder.h  Event_queue_builder.ih  Handle.h  Handle.ih  README.md  Sphere_intersecter.h  Sphere_intersecter.ih  Spherical_utils.h  Vorder.h  Vorder.ih  main.cpp
geomview/: CMakeLists.txt  main.cpp
interface/: CMakeLists.txt  ThicknessDiag-Qt.pro  allwindowstates.h  cetreewidgetitem.h  check_output.py  circleview.cpp  circleview.h  customviewer.cpp  customviewer.h  drawabletreewidgetitem.cpp  drawabletreewidgetitem.h  estreewidgetitem.cpp  estreewidgetitem.h  eventqueue.h  eventqueuebuilder.h  eventqueuewindowstate.cpp  eventqueuewindowstate.h  generatespheresdialog.h  ietreewidgetitem.cpp  ietreewidgetitem.h  kernel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nestreewidgetitem.cpp  nestreewidgetitem.h  normaleventsitetreewidget.cpp  normaleventsitetreewidget.h  selectspheredialog.cpp  selectspheredialog.h  sphereformdialog.h  sphereintersecter.h  sphereintersecterproxy.cpp  sphereintersecterproxy.h  spherelistwidgetitem.cpp  spherelistwidgetitem.h  spheresstatewidget.cpp  spheresstatewidget.h  sphereswindowstate.cpp  (+15 more)
interface/dialogs/: selectspheredialog.cpp  selectspheredialog.h  sphereformdialog.h
interface/treewidgetitems/: bpestreewidgetitem.h  cetreewidgetitem.cpp  cetreewidgetitem.h  drawabletreewidgetitem.cpp  drawabletreewidgetitem.h  ietreewidgetitem.cpp  ietreewidgetitem.h  nestreewidgetitem.cpp  nestreewidgetitem.h  pestreewidgetitem.cpp  spheretreewidgetitem.cpp  spheretreewidgetitem.h
interface/windowstates/: eventqueuewindowstate.cpp  eventqueuewindowstate.h  sphereswindowstate.cpp  windowstate.cpp  windowstatewidget.cpp  windowstatewithmenu.cpp
lib/: BO_algorithm_for_spheres.cpp  CMakeLists.txt  Event_queue.cpp  Event_queue_builder.cpp  Handle.cpp  Sphere_intersecter.cpp  Vorder.cpp  kernel.h
python/: CMakeLists.txt  python_export.cpp
qt/: CMakeLists.txt  kernel.h  qgldrawable.h  sphereintersecterproxy.h  sphereview.cpp  window.cpp  window.h
qt/dialogs/: generatespheresdialog.ui  selectspheredialog.cpp  selectspheredialog.h  sphereformdialog.ui
qt/treewidgetitems/: bpestreewidgetitem.cpp  drawabletreewidgetitem.cpp  ietreewidgetitem.cpp  pestreewidgetitem.h
qt/windowstates/: eventqueuewindowstate.cpp  eventqueuewindowstate.h  sphereswindowstate.cpp  sphereswindowstate.h  windowstate.h  windowstatefactory.cpp  windowstatewidget.h
src/: CMakeLists.txt  Event_queue.cpp  Sphere_intersecter.cpp
tests/: CMakeLists.txt  main.cpp  python_export.cpp  test.py
tests/LinearCellComplex/: CMakeLists.txt  Geomview_stream_extension.cpp  Geomview_stream_extension.h  main.cpp
tests/Sphere_Sweep_Line/: CMakeLists.txt  Circle_intersecter.h  Circle_proxy.h  Event_queue.h  Event_queue_builder.h  Handle.h  Sphere_intersecter.h  Spherical_utils.h  circle_proxy.h  circle_utils.h  event_queue.h  event_sites.h  events.h  main.cpp  performance_of_insertion.ods  test_performance_of_insertion.py  timing.csv  vertical_orderer.h
tests/Sphere_Sweep_Line/interface/: ThicknessDiag-Qt.pro  generatespheresdialog.cpp  generatespheresdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  selectspheredialog.cpp  selectspheredialog.ui  sphereformdialog.cpp  sphereformdialog.ui
tests/Sphere_Sweep_Line/tests/: CMakeLists.txt  circle_proxy.cpp  geomview.cpp.bak
tests/SphericalCMap/: main.cpp
tests/Spherical_CMap/: CMakeLists.txt  TODO.md  main.cpp
ui/: ui_generatespheresdialog.h  ui_mainwindow.h  ui_selectspheredialog.h  ui_sphereformdialog.h
v-ordering/: CMakeLists.txt  generate_spheres.py  main.cpp  test_spheres.h
